[tool.poetry]
name = "airbnb-new"
version = "0.1.0"
description = ""
authors = ["lee hanse <prsuw113@naver.com>"]
license = "MIT"
readme = "README.md"


[project]
requires-python = ">=3.4,<3.7"

[tool.poetry.dependencies]
psycopg2-binary = "<2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
